# SAEM

./: .gitignore  README.md  environment.yml  pyproject.toml
data/BadGrund/: Tx2.pos  chdata.py
data/Ludvika_AFMAG/: TF_Ludvika3D.mat  TF_Ludvika_for_custEM_20210802.mat
data/abick/: data_f1.mat  procData.py
data/giesen/: comb2data.py  combData.ipynb  data_f1.mat  data_f2.mat  data_f3.mat  data_f4.mat  inv_combined_p1.py  newdata_f6_1.mat  prepareInv.py  prepareInv3d.py  procData.py  procDataNew.py  shmodel.py
data/giesen/data/: combineAreas.py  (+2 more)
data/giesen_old/: comb2data.py  data_f1.mat  data_f4.mat  inv2dgiesen.py  newdata_f4.mat  newdata_f6_2.mat  prepareInv3d.py
data/goslar/: GOS_raw_inversion_ByBz.emdata  convertmaredata.py  myinv.py  topo.txt
data/kropfmuehl/: P5.emdata  convertmaredata.py  myinv.py
data/schleiz/: Ball.emdata  Ball_B_Tx1.npz  Ball_B_Tx123456.npz  Ball_B_Tx12456.npz  L07_bybz_edi_B_Tx12345.npz  L07_bybz_edited.emdata  chreadmarefile.py  chsaemdata.py  convertmaredata.py  inv2dlotem.py
data/schleiz2d/: Ball.emdata  L07_bybz_edited.emdata  chsaemdata.py  convertmaredata.py
data/synth2d/: inv2dsynth.py  mk2dsynth.py
examples/: 01-SAEM-Fields.ipynb  02-SimpleModelling.ipynb  03-LayerCase.ipynb  05-TxLength.ipynb  06-FlightAltitude.ipynb  07-FlightAltitudeHeli.ipynb  08-BorkumSAEM.ipynb  3LayerCase.ipynb  3layercase.py  BorkumSAEM.ipynb  FlightAltitude.ipynb  SAEM-Fields.ipynb  SimpleModelling.ipynb  TxLength.ipynb
saem/: __init__.py  csem.py  csemsurvey.py  emdata.py  maredata.py  modelling.py  mt.py  plotting.py  saem.py  tools.py
(+67 files in other folders)
